--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.10.2",
         "admin-lte": "^3.0.0-alpha.2",
         "font-awesome": "^4.7.0"
     }
